[package]
name = "no_mangle_pub_export_c_fn"
version = "0.1.2"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "A library for extracting #[no_mangle] pub extern \"C\" functions."
documentation = "https://docs.rs/no_mangle_pub_export_c_fn"
readme = "README.md"
repository = "https://github.com/JohnScience/no_mangle_pub_export_c_fn"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["artifact", "parsing"]
categories = ["development-tools::build-utils", "development-tools::ffi"]
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/lib.rs",
    "/tests/**",
]
# publish | not needed
# metadata | not needed
# default-run | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# resolver | not needed

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0.83", features=["full", "visit", "extra-traits"] }
proc-macro2 = { version="1.0.34", features= ["span-locations"] }
walkdir = "2.3.2"
serde = { version="1.0.132", features=["derive"] }

[dev-dependencies]
serde_json = "1.0.73" # For test of JSON serialization